Suchmaschine fixed top alignment

--- a/assets/css/suchmaschine.css
+++ b/assets/css/suchmaschine.css
@@ -19,6 +19,10 @@ label{
     display:block;
 }
 
+form {
+    padding-top: 50px;
+}
+
 input[type="text"], select, input[type="number"] {
     border: 1px solid var(--such-border);
     border-radius: 4px;
